Added SignIn & HealthCheck Endpoint

--- a/api/CodeMarathon.ResumeBuilder/CodeMarathon.ResumeBuilder/appsettings.Development.json
+++ b/api/CodeMarathon.ResumeBuilder/CodeMarathon.ResumeBuilder/appsettings.Development.json
@@ -5,5 +5,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "apiUrl": "https://www.linkedin.com/",
+  "authCodeUrl": "uas/oauth2/accessToken",
+  "apiKey": "77utgl2wd203sw",
+  "apiSecret": "lZr1CTKBbgOwXoHc",
+  "redirectUrl": "http://127.0.0.1:5500/index.html"
 }
