--- a/api/CodeMarathon.ResumeBuilder/CodeMarathon.ResumeBuilder/appsettings.json
+++ b/api/CodeMarathon.ResumeBuilder/CodeMarathon.ResumeBuilder/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "apiUrl": "https://www.linkedin.com/",
+  "authCodeUrl": "uas/oauth2/accessToken",
+  "apiKey": "77utgl2wd203sw",
+  "apiSecret": "lZr1CTKBbgOwXoHc",
+  "redirectUrl": "http://127.0.0.1:5500/index.html"
 }
