--- a/api/CodeMarathon.ResumeBuilder/CodeMarathon.ResumeBuilder.BusinessLogic/CodeMarathon.ResumeBuilder.BusinessLogic.csproj
+++ b/api/CodeMarathon.ResumeBuilder/CodeMarathon.ResumeBuilder.BusinessLogic/CodeMarathon.ResumeBuilder.BusinessLogic.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CodeMarathon.ResumeBuilder.Common\CodeMarathon.ResumeBuilder.Common.csproj" />
+    <ProjectReference Include="..\CodeMarathon.ResumeBuilder.DTOs\CodeMarathon.ResumeBuilder.DTOs.csproj" />
+  </ItemGroup>
+
 </Project>
