--- a/api/CodeMarathon.ResumeBuilder/CodeMarathon.ResumeBuilder.Infrastructure/CodeMarathon.ResumeBuilder.Infrastructure.csproj
+++ b/api/CodeMarathon.ResumeBuilder/CodeMarathon.ResumeBuilder.Infrastructure/CodeMarathon.ResumeBuilder.Infrastructure.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
