--- a/api/CodeMarathon.ResumeBuilder/CodeMarathon.ResumeBuilder/CodeMarathon.ResumeBuilder.csproj
+++ b/api/CodeMarathon.ResumeBuilder/CodeMarathon.ResumeBuilder/CodeMarathon.ResumeBuilder.csproj
@@ -1,12 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNet.Security.OAuth.LinkedIn" Version="5.0.18" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CodeMarathon.ResumeBuilder.BusinessLogic\CodeMarathon.ResumeBuilder.BusinessLogic.csproj" />
+    <ProjectReference Include="..\CodeMarathon.ResumeBuilder.Common\CodeMarathon.ResumeBuilder.Common.csproj" />
+    <ProjectReference Include="..\CodeMarathon.ResumeBuilder.DTOs\CodeMarathon.ResumeBuilder.DTOs.csproj" />
   </ItemGroup>
 
 </Project>
