--- a/api/CodeMarathon.ResumeBuilder/CodeMarathon.ResumeBuilder.BusinessLogic/CodeMarathon.ResumeBuilder.BusinessLogic.csproj
+++ b/api/CodeMarathon.ResumeBuilder/CodeMarathon.ResumeBuilder.BusinessLogic/CodeMarathon.ResumeBuilder.BusinessLogic.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
   </ItemGroup>
 
