Added redirect to api, fixed CORS issue

--- a/api/CodeMarathon.ResumeBuilder/CodeMarathon.ResumeBuilder/appsettings.json
+++ b/api/CodeMarathon.ResumeBuilder/CodeMarathon.ResumeBuilder/appsettings.json
@@ -11,5 +11,5 @@
   "authCodeUrl": "uas/oauth2/accessToken",
   "apiKey": "77utgl2wd203sw",
   "apiSecret": "lZr1CTKBbgOwXoHc",
-  "redirectUrl": "http://127.0.0.1:5500/index.html"
+  "redirectUrl": "http://localhost:4200/resume-builder"
 }
