--- a/ui/codemarathon.resumebuilder.spa/angular.json
+++ b/ui/codemarathon.resumebuilder.spa/angular.json
@@ -64,6 +64,10 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "codemarathon.resumebuilder.spa:build",
+            "proxyConfig": "src/proxy.conf.json"
+          },
           "configurations": {
             "production": {
               "browserTarget": "codemarathon.resumebuilder.spa:build:production"
@@ -102,5 +106,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
